--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+    </style> 
     <title>Raul Torrente</title>
 </head>
 <body>
-    <h1>Mario jisado</h1>
+    <div class="fullPage">
+        <header>
+            <h1>Raultl12</h1>
+            <h2>Casi ingeniero informático</h2>
+        </header>
+    
+        <main>
+            <p>Mi perfil de <a href="https://www.linkedin.com/in/ra%C3%BAl-torrente-l%C3%B3pez-6b9760250">Linkedin</a></p>
+        </main>
+    
+        <footer>
+            <p>El footer</p>
+        </footer>
+    </div>
 </body>
 </html>
